syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "Key_manager_grpc";
option objc_class_prefix = "HLW";

package br.com.zup;

service KeyManagerGrpcService {
  rpc registra(RegistrarChavePixRequest) returns (RegistrarChavePixResponse) {}
}

enum TipoChavePix {
  UNKNOWN_CHAVE_PIX = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoConta {
  UNKNOWN_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message RegistrarChavePixRequest {
  string clienteId = 1;
  TipoChavePix tipo = 2;
  string chave = 3;
  TipoConta conta = 4;
}

message RegistrarChavePixResponse {
  string pixID = 1;
  string clienteId = 2;
}


